--- a/src/components/NewTask/TaskForm.module.css
+++ b/src/components/NewTask/TaskForm.module.css
@@ -7,6 +7,7 @@
   font:inherit;
   padding: 0.25rem;
   border: none;
+  border-radius: 20px;
   border-bottom: 3px solid #ccc;
   flex: 1;
   margin-right: 2rem;
@@ -15,4 +16,8 @@
 .form input:focus {
   outline: none;
   border-color: #7a0144;
+}
+
+.invalid{
+  background-color: rgba(255, 118, 118, 0.902);
 }
